--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "sass": "^1.80.6",
     "svelte": "^5.1.3",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vite-plugin-singlefile": "^2.0.3"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.1"
   }
 }
