--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
-  "name": "svelte-app",
-  "private": true,
-  "version": "0.0.0",
+  "name": "kewi_gui",
+  "version": "0.1.0",
+  "description": "",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite dev",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+    "tauri": "tauri"
+  },
+  "license": "MIT",
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.1",
+    "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-shell": "^2"
   },
   "devDependencies": {
+    "@sveltejs/adapter-static": "^3.0.5",
+    "@sveltejs/kit": "^2.7.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
-    "sass": "^1.80.6",
-    "svelte": "^5.1.3",
-    "vite": "^5.4.10",
-    "vite-plugin-singlefile": "^2.0.3"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.7.1"
+    "@tauri-apps/cli": "^2",
+    "svelte": "^5.0.0",
+    "svelte-check": "^4.0.0",
+    "typescript": "^5.5.0",
+    "vite": "^5.4.10"
   }
 }
