--- a/package.json
+++ b/package.json
@@ -22,8 +22,18 @@
     "@sveltejs/kit": "^2.7.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@tauri-apps/cli": "^2",
+    "autoprefixer": "^10.4.20",
+    "bits-ui": "^1.0.0-next.64",
+    "clsx": "^2.1.1",
+    "cmdk-sv": "^0.0.18",
+    "lucide-svelte": "^0.462.0",
+    "postcss": "^8.4.49",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwind-variants": "^0.3.0",
+    "tailwindcss": "^3.4.15",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.5.0",
     "vite": "^5.4.10"
   }
